--- a/ScreenCapturing/packages.config
+++ b/ScreenCapturing/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Emoji.Wpf" version="0.3.3" targetFramework="net472" />
   <package id="jQuery" version="1.6.4" targetFramework="net45" />
   <package id="Microsoft.AspNetCore.Connections.Abstractions" version="5.0.4" targetFramework="net472" />
   <package id="Microsoft.AspNetCore.Http.Connections.Client" version="5.0.4" targetFramework="net472" />
