--- a/ScreenCapturing/packages.config
+++ b/ScreenCapturing/packages.config
@@ -2,6 +2,8 @@
 <packages>
   <package id="Emoji.Wpf" version="0.3.3" targetFramework="net472" />
   <package id="jQuery" version="1.6.4" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Razor" version="3.2.7" targetFramework="net472" />
+  <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNetCore.Connections.Abstractions" version="5.0.4" targetFramework="net472" />
   <package id="Microsoft.AspNetCore.Http.Connections.Client" version="5.0.4" targetFramework="net472" />
   <package id="Microsoft.AspNetCore.Http.Connections.Common" version="5.0.4" targetFramework="net472" />
@@ -17,7 +19,9 @@
   <package id="Microsoft.Extensions.Logging.Abstractions" version="5.0.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Options" version="5.0.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Primitives" version="5.0.0" targetFramework="net472" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
   <package id="Microsoft.Win32.Registry" version="4.7.0" targetFramework="net472" />
+  <package id="MvvmCross.Platform" version="4.2.2" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net45" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.Diagnostics.DiagnosticSource" version="5.0.0" targetFramework="net472" />
